apps/robot-shop/cart/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: cart
  labels:
    service: cart
  namespace: robot-shop
spec:
  replicas: 1
  selector:
    matchLabels:
      service: cart
  template:
    metadata:
      labels:
        service: cart
    spec:
      containers:
        - name: cart
          image: robotshop/rs-cart:latest
          imagePullPolicy: Always
          ports:
            - containerPort: 8080
          resources:
            limits:
              cpu: 200m
              memory: 100Mi
            requests:
              cpu: 100m
              memory: 50M
